--- a/index.html
+++ b/index.html
@@ -15,29 +15,203 @@
 <body>
     <!-- Header section start -->
     <header>
-        <div class="container">
-            <div class="header-wrapper">
-                <div class="header-left half-width">
-                    <h1>Conmebol <br>
-                        Copa America <br>
-                        2021</h1>
-                    <button class="okay-button">Watch Live <i class="fas fa-arrow-right"></i></button>
-                </div>
-                <div class="header-right half-width">
-                    <img src="images/banner.png" alt="Football Player Image">
-                </div>
+        <div class="header-wrapper">
+            <div class="header-left half-width">
+                <h1>Conmebol <br>
+                    Copa America <br>
+                    2021</h1>
+                <button class="okay-button">Watch Live <i class="fas fa-arrow-right"></i></button>
+            </div>
+            <div class="header-right half-width">
+                <img src="images/banner.png" alt="Football Player Image">
             </div>
         </div>
     </header>
 
     <!-- Main section start -->
     <main>
+        <section>
+            <div class="container">
+                <div class="players-gallery">
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-1.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Neymar Jr </h3>
+                            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Ligue 1 club Paris Saint-Germain.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-2.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Lionel Messi </h3>
+                            <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an
+                                attacking midfielder and captains the Argentina national team.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-3.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Cristiano Ronaldo </h3>
+                            <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who
+                                plays as a forward for Serie A club Juventus and captains the Portugal national team.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-4.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Paulo Dybala </h3>
+                            <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for
+                                Serie A club Juventus and the Argentina national team.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-5.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Mesut Özil </h3>
+                            <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for
+                                Süper Lig club Fenerbahçe.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-6.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Mauro Icardi </h3>
+                            <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for
+                                Ligue 1 club Paris Saint-Germain and the Argentina national team.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-7.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title">Ángel Di María </h3>
+                            <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club
+                                Paris Saint-Germain and the Argentina national team.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-8.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Kylian Mbappé </h3>
+                            <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue
+                                1 club Paris Saint-Germain and the France national team.
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-9.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Mohamed Salah </h3>
+                            <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
+                                forward for Premier League club Liverpool and captains the Egypt national team.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-10.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Harry Kane </h3>
+                            <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for
+                                Premier League club Tottenham Hotspur and captains the England national team.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-11.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Kevin De Bruyne </h3>
+                            <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for
+                                Premier League club Manchester City.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="player-detail">
+                        <div class="player-photo">
+                            <img src="images/players/player-12.png" alt="football players picture">
+                        </div>
+                        <div class="player-info">
+                            <h3 class="player-title"> Philippe Coutinho </h3>
+                            <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an
+                                attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
+                            </p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="highlight-area">
+                    <div class="highlight-left-part">
+                        <h2>All Highlights <br>
+                            Copa America 2021</h2>
+                        <p>Argentina won their first major title in 28 years on Saturday when an Angel Di Maria goal
+                            gave them a 1-0 win over Brazil and a record-equalling 15th Copa America.
+                            Di Maria got the winner midway through the first half.</p>
+                        <button class="okay-button">Watch Live <i class="fas fa-arrow-right"></i></button>
+                    </div>
+                    <div class="highlight-right-part">
+                        <img src="images/match.png" alt="football match picture">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+
+
+
+
 
     </main>
 
     <!-- Footer section start -->
     <footer>
+        <div class="footer-wrapper">
+            <div class="footer-top">
+                <img src="images/Logo.png" alt="Website logo">
+            </div>
+            <div class="social-icons">
+                <a target="_blank" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="https://google.com/"><i class="fab fa-dribbble"></i></a>
+                <a target="_blank" href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                <a target="_blank" href="https://youtube.com/"><i class="fab fa-youtube"></i></a>
 
+            </div>
+            <div class="copyright">
+                Copyright © 2022 Football
+            </div>
+        </div>
     </footer>
 </body>
 
