latest result and news part added

--- a/index.html
+++ b/index.html
@@ -192,6 +192,70 @@
 
 
 
+        <section>
+            <div class="container">
+                <div class="result-area">
+                    <div class="result-title">
+                        <h2>Latest Result</h2>
+                        <h4>Copa America</h4>
+                    </div>
+                    <div class="scores">
+                        <img src="images/Argentina.png" alt="Argentina flag" class="arg-flag">
+                        <h3 class="goals">1</h3>
+                        <h3 class="goals">0</h3>
+                        <img src="images/Brazil.png" alt="Brazil flag" class="bra-flag">
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+        <section>
+            <div class="container">
+                <h2 class="news-area-title">Latest News</h2>
+                <div class="latest-news">
+
+                    <article class="news">
+                        <div class="news-thumbnail">
+                            <img src="images/news-1.jpg" alt="Football news thumbnail">
+                        </div>
+                        <div class="news-content">
+                            <h3>Dreamt Of Winning Copa America For Long Time</h3>
+                            <p>After winning the Copa America title for the first time Lionel Messi was very happy and
+                                said that it was his
+                                dream to win the title</p>
+                        </div>
+                    </article>
+                    <article class="news">
+                        <div class="news-thumbnail">
+                            <img src="images/news-2.jpg" alt="Football news thumbnail">
+                        </div>
+                        <div class="news-content">
+                            <h3>Portugal Captain Cristiano Ronaldo Wins Golden Boot</h3>
+                            <p>Portugal forward Cristiano Ronaldo and Czech Republic's Patrik Schick scored five goals
+                                each while Karim Benzema of France</p>
+                        </div>
+                    </article>
+                    <article class="news">
+                        <div class="news-thumbnail">
+                            <img src="images/news-33.jpg" alt="Football news thumbnail">
+                        </div>
+                        <div class="news-content">
+                            <h3>Lucas Paqueta Sends Brazil Past Peru Into The Final</h3>
+                            <p>Lucas Paqueta Sends Brazil Past Peru Into The FinalCopa America: Lucas Paqueta's goal
+                                sent Brazil into the final as they beat Peru</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
 
     </main>
 
@@ -209,7 +273,7 @@
 
             </div>
             <div class="copyright">
-                Copyright © 2022 Football
+                Copyright &#169 2022 Football
             </div>
         </div>
     </footer>
