--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <!-- Header section start -->
     <header>
         <div class="header-wrapper">
-            <div class="header-left half-width">
+            <div class="header-left">
                 <h1>Conmebol <br>
                     Copa America <br>
                     2021</h1>
                 <button class="okay-button">Watch Live <i class="fas fa-arrow-right"></i></button>
             </div>
-            <div class="header-right half-width">
+            <div class="header-right">
                 <img src="images/banner.png" alt="Football Player Image">
             </div>
         </div>
@@ -190,7 +190,7 @@
 
 
 
-
+        <!--Latest Result news area start -->
 
         <section>
             <div class="container">
@@ -210,7 +210,7 @@
             </div>
         </section>
 
-
+        <!-- Latest news area start -->
         <section>
             <div class="container">
                 <h2 class="news-area-title">Latest News</h2>
