making responsive for mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <h1>Conmebol <br>
                     Copa America <br>
                     2021</h1>
-                <button class="okay-button">Watch Live <i class="fas fa-arrow-right"></i></button>
+                <a target="_blank" href="https://www.youtube.com/"><button class="okay-button">Watch Live <i
+                            class="fas fa-arrow-right"></i></button></a>
             </div>
             <div class="header-right">
                 <img src="images/banner.png" alt="Football Player Image">
@@ -168,7 +169,9 @@
             </div>
         </section>
 
+        <!-- Highlight area start -->
         <section>
+
             <div class="container">
                 <div class="highlight-area">
                     <div class="highlight-left-part">
@@ -177,7 +180,8 @@
                         <p>Argentina won their first major title in 28 years on Saturday when an Angel Di Maria goal
                             gave them a 1-0 win over Brazil and a record-equalling 15th Copa America.
                             Di Maria got the winner midway through the first half.</p>
-                        <button class="okay-button">Watch Live <i class="fas fa-arrow-right"></i></button>
+                        <a target="_blank" href="https://www.youtube.com/"><button class="okay-button">Watch Live <i
+                                    class="fas fa-arrow-right"></i></button></a>
                     </div>
                     <div class="highlight-right-part">
                         <img src="images/match.png" alt="football match picture">
@@ -186,8 +190,6 @@
             </div>
 
         </section>
-
-
 
 
         <!--Latest Result news area start -->
@@ -250,12 +252,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
-
-
 
     </main>
 
